added a tv log for my 2025 favs

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -28,7 +28,7 @@
 
 			<!--	TEMPLATE 
 						<div class="log">
-				<img src="!g/">
+				<img src="img/">
 				<div class="hov">
 					<div class="box">
 						<h2>title</h2>
@@ -45,44 +45,57 @@
 					<h4>movies</h4>
 					<dl>
 						<dt><b>chainsaw man reze arc</b> <i>dir. tatsuya yoshihara</i></dt>
-						<dd>what a great experience this movie was. i watched it during the premiere and i loved seeing so many people in suits. the visuals, the <a title="2025 music recap - fav albums" href="/music/recaps/2025/index.html#lp" target="_blank">ost</a>, the sound design. there was SO so so much loved poured into this and you can tell with every frame. denji and reze's arc felt so much more devastating compared to the manga alone. just amazing.</dd>
+						<dd>
+							<img src="img/2025-favs/csm.png" alt="chainsaw man reze movie poster" class="poster">
+							what a great experience this movie was. i watched it during the premiere and i loved seeing so many people in suits. the visuals, the <a title="2025 music recap - fav albums" href="/music/recaps/2025/index.html#lp" target="_blank">ost</a>, the sound design. there was SO so so much loved poured into this and you can tell with every frame. denji and reze's arc felt so much more devastating compared to the manga alone. just amazing.
+						</dd>
 						<dt><b>monster</b> <i>dir. hirokazu kore-eda</i></dt>
-						<dd>a heartbreaking tale of two kids trying to figure themselves out while the people tells them they are monsters... i actually watched this movie because of someone made a parallel to <i>the summer hikaru died</i> and YEAH... it really is just like that. i cried so much during this.</dd>
+						<dd>
+							<img src="img/2025-favs/monster.png" alt="monster movie poster" class="poster">
+							a heartbreaking tale of two kids trying to figure themselves out while the people tells them they are monsters... i actually watched this movie because of someone made a parallel to <i>the summer hikaru died</i> and YEAH... it really is just like that. i cried so much during this.
+						</dd>
 						<dt><b>rec</b> <i>dir. jaume balagueró, paco plaza</i></dt>
-						<dd>this movie was really fucking intense but it was also a really funny experience for me because of the fact that spanish is my native language and so every time they said some shit like <q>joder tio</q> i would just burst laughing. but in all seriousness i really did not expect to like this found footage film so much. which of all found footage movies i've watched, this might be one of the best ones. the story is so interesting from the start and <span class="spoiler">it eventually delves into something so much bigger than what we were initially exposed to.</span> i just really adored how this movie exposes us to the truth of what's happening bit by bit. it was a great watching experience.</dd>
+						<dd>
+							<img src="img/2025-favs/rec.png" alt="rec movie poster" class="poster">
+							this movie was really fucking intense but it was also a really funny experience for me because of the fact that spanish is my native language and so every time they said some shit like <q>joder tio</q> i would just burst laughing. but in all seriousness i really did not expect to like this found footage film so much. which of all found footage movies i've watched, this might be one of the best ones. the story is so interesting from the start and <span class="spoiler">it eventually delves into something so much bigger than what we were initially exposed to.</span> i just really adored how this movie exposes us to the truth of what's happening bit by bit. it was a great watching experience.
+						</dd>
 					</dl>
 					<h4>shows</h4>
 					<dl>
 						<dt><b>the summer hikaru died</b> <i>dir. ryōhei takeshita</i> </dt>
-						<dd>this anime kind of destroyed me. while watching i paid so much attention to the clear subtext of <b>hikaru</b> being in love with <b>yoshiki</b> and therefore the denial and the <i>monster</i> theming of the show. though while i really like to view it under these lens, i also really like the supernatural aspect of the show. very creepy and interesting! <br><br> i need to read the manga BADLY!!!</dd>
+						<dd>
+							<img src="img/2025-favs/tshd.png" alt="the summer hikaru died poster" class="poster">
+							this anime kind of destroyed me. while watching i paid so much attention to the clear subtext of <b>hikaru</b> being in love with <b>yoshiki</b> and therefore the denial and the <i>monster</i> theming of the show. though while i really like to view it under these lens, i also really like the supernatural aspect of the show. very creepy and interesting! <br><br> i need to read the manga BADLY!!!
+						</dd>
 					</dl>
+					<p class="date">written on 08.feb.26</p>
 				</div>
 			</div>
 
 			<div class="log">
 				<div class="box">
-					<img src="!g/madoka.png" onmouseover="this.src='!g/madoka-rebellion/cover.png';" onmouseout="this.src='!g/madoka.png';" class="cover" alt="madoka magica anime cover">
+					<img src="img/madoka.png" onmouseover="this.src='!g/madoka-rebellion/cover.png';" onmouseout="this.src='!g/madoka.png';" class="cover" alt="madoka magica anime cover">
 					<h3 id="rebellion">madoka magica + rebellion</h3>
 					<p>to me, this is art.</p>
 					<p>when i first watched the <i>madoka magica</i> anime alongside <i>rebellion</i> around 2015 i was honestly just very confused and didn't get it all. it took me watching this series again when i was a bit older to really appreciate it. i loved the anime. the music, the witch segments animation. the DRAMA of it all. i am insanely in love with the artistry put into this. which feels a bit silly because i am after all talking about <b>madoka magica</b> but at this point idgaf.</p>
 					<p>and then came <i>rebellion</i> and elevated all of this to 100 times. i have watched this movie at least 10 times. i love it so so so much. homura akemi i would die for you.</p>
 					<p>i really can't wait for the 4th movie to come out. it will be fucking insane if it manages to be better than <i>rebellion</i> since i already consider that movie perfect.</p>
 					<h3>screenshots</h3>
-					<img src="!g/madoka-rebellion/rebellion1.jpg" alt="screenshots from madoka magica rebellion" width="100%">
-					<img src="!g/madoka-rebellion/rebellion2.jpg" alt="screenshots from madoka magica rebellion" width="100%">
-					<img src="!g/madoka-rebellion/rebellion3.jpg" alt="screenshots from madoka magica rebellion" width="100%">
-					<img src="!g/madoka-rebellion/rebellion4.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="img/madoka-rebellion/rebellion1.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="img/madoka-rebellion/rebellion2.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="img/madoka-rebellion/rebellion3.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="img/madoka-rebellion/rebellion4.jpg" alt="screenshots from madoka magica rebellion" width="100%">
 				</div>
 			</div>
 
 			<div class="log">
 				<div class="box">
-					<img src="!g/joeperatalkswithyou.png" alt="poster for joe pera talks with you" class="cover">
+					<img src="img/joeperatalkswithyou.png" alt="poster for joe pera talks with you" class="cover">
 					<h3>joe pera talks with you</h3>
 					<p>i will never forget how it felt to get home at 2am from my ass retail job and just turning on the tv to put it in the background as i get ready to go to sleep. the last time i had watched tv i must have left it on <u>adult swim</u> because when i turn on my tv i was met with joe pera's show: <i>joe pera talks with you</i>. i don't know why but i could feel there was something very special about this show. i kinda just sat there mesmerized at the screen. it was an episode from its 2nd season, the one where <span class="spoiler">he writes his grandma an obituary....</span> i think maybe one of the reasons why i was so attached to the tv was because of how much i could relate to what was happening on the screen. i remember thinking <q>what will i do if my grandma ever dies?</q> ... i don't know. it just felt very genuine. and the episode really touched me. i decided to watch the rest of the show that week and i was not disappointed.</p>
 					<p>i think i love everything about this show, joe pera's vibe is just immaculate. i wish i was him. his relationship with sarah has such a sweetness to it. i am tearing up just thinking about them. while watching the show i remember thinking that i wanted to have what they have with someone else in the future. joe's relationship with his grandma ooooooouuuuuuughhhhh <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> <img src="/!g/pix/catsob1.gif"> it really reminded me a lot of my relationship with <a title="blog post: remembering my grandma" href="/blog/2024/grandma/index.html">my grandma</a>. they would crank up jokes and tease each other. i really saw a lot of myself in this show. it's very special to me because of that. i think it's a show that really shows how important the small things in life are.</p>
 					<p>i was very sad when i got the news that the show got cancelled. though i do have to say that the ending of season 3 was wonderfully done. i rewatched it recently with my girlfriend and i couldn't help but sob when we finished watching it. now that my grandma passed away, i appreciate this show more than when i first watched it. i love this show dearly. and i will always look up to it. this is a wonderful piece of media.</p>
-					<img src="!g/joesitting.png" width="90%" alt="a screenshot from joe pera talks with you. its a shot of a snowy forest and in the center we see joe sitting, the camera is behind him.">
+					<img src="img/joesitting.png" width="90%" alt="a screenshot from joe pera talks with you. its a shot of a snowy forest and in the center we see joe sitting, the camera is behind him.">
 					<blockquote>my nana and her quiet home were that to me, a place of undeniable good in the world. <br> and now that they're gone- <br> well, i actually still have to take care of the house. <br> i don't know if i'll ever be able to find that again <br> or if i'll ever feel alright again <br> i don't know. <br> <b>what do i know?</b></blockquote>
 				</div>
 			</div>
@@ -90,7 +103,7 @@
 
 			<div class="log">
 				<div class="box">
-					<img src="!g/kaiba.png" class="cover">
+					<img src="img/kaiba.png" class="cover">
 					<h3 id="kaiba">kaiba</h3>
 					<p>i decided to watch this one day because i stumbled upon a gif of the opening one day and i just found the art so so so beautiful!</p>
 					<details>
@@ -105,7 +118,7 @@
 			</div>
 			<div class="log">
 				<div class="box">
-					<img src="!g/twin-peaks.png" class="cover">
+					<img src="img/twin-peaks.png" class="cover">
 					<h3 id="twin peaks">twin peaks</h3>
 					<p>during april 2023 my girlfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
 					<p>i'm gonna get a tiny bit cheesy for a sec but then my girlfriend proceeded to explain to me the general plot of <i>twin peaks</i> and her face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
@@ -123,7 +136,7 @@
 			</div>
 			<div class="log">
 				<div class="box">
-					<img src="!g/morel%20orel.png" class="cover" alt="moral orel poster">
+					<img src="img/morel%20orel.png" class="cover" alt="moral orel poster">
 					<h3 id="moral-orel">moral orel</h3>
 					<p>this show was such an emotional ride :')</p>
 					<p>despite the show being mostly like a comedy of the lives of these people, i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. and i get it.</p>
@@ -142,16 +155,16 @@
 			<h2>blu-rays &amp; DVDs</h2>
 			<p>as always, i try to get my favorite stuff physically. here's some awesome disks i own :p</p>
 			<div class="wrapper">
-				<img title="adventure time full DVD set" src="disks/adventure-time.jpg" alt="adventure time full DVD set">
-				<img title="puella magi madoka magica the movie" src="disks/pmmm-the-movie.jpg" alt="pmm the movie">
-				<img title="PMMM rebellion" src="disks/rebellion.jpg" alt="puella magi madoka magica rebellion">
-				<img title="PMMM anime (episodes 1 - 8)" src="disks/pmmm-anime-1-8.jpg" alt="puella magi madoka magica blu-ray disk episodes 1 to 8">
-				<img title="wall-e" src="disks/wall-e.jpg" alt="wall-e blu ray">
-				<img title="kaiba" src="disks/kaiba.jpg">
-				<img title="the little prince" src="disks/the-little-prince.jpg">
-				<img title="train to busan" src="disks/train-to-busan.jpg">
-				<img title="everything everywhere all at once" src="disks/eeaao.jpg">
-				<img title="surf's up" src="disks/surfs-up.jpg">
+				<img title="adventure time full DVD set" src="img/disks/adventure-time.jpg" alt="adventure time full DVD set">
+				<img title="puella magi madoka magica the movie" src="img/disks/pmmm-the-movie.jpg" alt="pmm the movie">
+				<img title="PMMM rebellion" src="img/disks/rebellion.jpg" alt="puella magi madoka magica rebellion">
+				<img title="PMMM anime (episodes 1 - 8)" src="img/disks/pmmm-anime-1-8.jpg" alt="puella magi madoka magica blu-ray disk episodes 1 to 8">
+				<img title="wall-e" src="img/disks/wall-e.jpg" alt="wall-e blu ray">
+				<img title="kaiba" src="img/disks/kaiba.jpg">
+				<img title="the little prince" src="img/disks/the-little-prince.jpg">
+				<img title="train to busan" src="img/disks/train-to-busan.jpg">
+				<img title="everything everywhere all at once" src="img/disks/eeaao.jpg">
+				<img title="surf's up" src="img/disks/surfs-up.jpg">
 			</div>
 		</aside>
 
@@ -216,7 +229,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 26.jan.26</b></p>
+		<p><b>last updated: 08.feb.26</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: gaegu, morningtea / body bg from madoka magica: rebellion</p>
 	</footer>
