minor updates to site wall and about

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -40,20 +40,20 @@
 
 	<!-- 	about me -->
 	<div id="about" class="draggable">
-		<div class="header">webmaster_info.txt<img onclick="closeBox('about')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header">webmaster.txt<img onclick="closeBox('about')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 25 year old from puerto rico. fluent in spanish and english so feel free to talk me to in either! i go by he / she <u title="él / ella en español!">*</u> pronouns though at the end of the day you can call me whatever, i don't mind. computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life.</p>
+					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 25 year old from puerto rico. fluent in spanish and english so feel free to talk me to in either! i go by he / she <u title="él / ella en español!">*</u> pronouns though at the end of the day you can call me whatever, i don't mind. i'm a 3rd year computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life.</p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
-				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i enjoy listening to music, walking, messing around with code, petting my cat, and kissing my girlfriend.</p>
-				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts, archive things important to me, and have fun! this site is mainly just for me and i love mantaining it when i have some free time.</p>
+				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>interest that don't involve having fun coding and design include listening to music, walking, journaling, petting my cat, and kissing my girlfriend.</p>
+				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts, archive things important to me, and have fun! this site is mainly just for me and i love maintaining it when i have some free time. it's my own journal i can show to anyone. this hobby also led me to pursue my degree in computer science which i'm also very greatful for!</p>
 
 				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i won't reach out fast but do feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<p style="text-align: right"><b>last updated on: 25.jan.26</b></p>
+				<p style="text-align: right"><b>last updated on: 08.feb.26</b></p>
 			</div>
 		</div>
 	</div>
@@ -210,11 +210,12 @@
 
 				<h3>video games</h3>
 				<li>portal 2</li>
-				<li>style savvy trendsetters</li>
+				<li>infinity nikki</li>
+				<li>style savvy series</li>
 				<li>stray</li>
 				<li>hyper light drifter</li>
 				<li>if found...</li>
-				<li>fallout</li>
+				<li>fallout series</li>
 
 				<h3>animanga</h3>
 				<li>madoka magica</li>
