--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -76,7 +76,7 @@
 			<a title="solaria - features very helpful guides including accessibility ones + rainbows!!" href="https://solaria.neocities.org" target="_blank"><img src="!g/solaria.gif" alt="solaria"></a>
 			<a title="trinity - love the joe pera shrine the most!" href="https://trinityexe.neocities.org/" target="_blank"><img src="!g/trinityexe.gif" alt="trinity.exe"></a>
 			<a title="nimravidae - cozy site, i love the green tones!" href="https://nimravidae.neocities.org" target="_blank"><img src="!g/nimravidae.gif"></a>
-			<a title="lapin - a major inspiration for me! their site is lovely and filled with so many things!" href="https://loves1ck.neocities.org/" target="_blank"><img src="!g/lovesick.png"></a>
+			<a title="lapin - a major inspiration for me! their site is lovely and filled with so many things!" href="https://cainhurst.org/" target="_blank"><img src="!g/cainhurst.png"></a>
 			<a title="donna - SO CHARMINGG ^-^ i need to follow one of their cooking recipes someday!" href="https://ancientangel333.neocities.org/" target="_blank"><img src="!g/ancientangel333.png"></a>
 			<a title="Becki - sweet personal site with an amazing curation of internet goodies such as pixels!" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
 			<a title="noah - LOVELYYY and very home-y ? site!!" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
@@ -251,6 +251,8 @@
 			<a href="https://tuesdaysplace.neocities.org" target="_blank"><img src="!g/tuesdaysplace.png" alt="tuesdaysplace"></a>
 			<a href="https://lydels.neocities.org/" target="_blank"><img src="!g/lydels.gif" alt="lydels"></a>
 			<a href="https://thecountrybat.com/" target="_blank"><img src="!g/thecountrybat.gif" alt="countrybat"></a>
+			<a href="https://moonflower.nekoweb.org" target="_blank"><img src="!g/moonflower.gif" alt="moonflower"></a>
+			<a href="https://waterlily.nekoweb.org" target="_blank"><img src="!g/waterlily.png" alt="waterlily"></a>
 		</div>
 
 		<!-- new buttons ^^ -->
