--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -80,8 +80,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="p" href="/fashion">fashion</a>
 			<a class="p" href="/scrapbook">scrapbook</a>
 			<a class="p" href="/shrines">shrines</a>
-			<a class="p" href="/collection">collections <img src="/!g/pix/updated1.gif" alt="updated page"></a>
-			<a class="p" href="/art">art &amp; crafts <img src="/!g/pix/updated1.gif" alt="updated page"></a>
+			<a class="p" href="/collection">collections</a>
+			<a class="p" href="/art">art &amp; crafts</a>
 
 			<h3>media</h3>
 			<a class="m" href="/music">music</a>
@@ -101,7 +101,6 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
 			<a class="s" href="sitemap.html">sitemap</a>
 			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
-			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
 			<a href="https://nekoweb.org/follow/doqmeat.com" class="s outlink">follow on nekoweb</a>
 		</nav>
 
@@ -166,11 +165,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> silksong, style savvy</p>
-					<p><span class="title">watching: </span> jojo (part 4), fallout (season 2)</p>
+					<p><span class="title">playing: </span> infinity nikki</p>
+					<p><span class="title">watching: </span> jojo (part 4)</p>
 					<p><span class="title">reading: </span> Computer Systems A Programmer's Perspective</p>
-					<p><span class="title">working on: </span> reworking iframe pages with the SSI feature of <a href="https://nekoweb.org" target="_blank">nekoweb</a>, new f2u template</p>
-					<p class="date">last updated: 28.jan.26</p>
+					<p><span class="title">working on: </span> reworking iframe pages with the SSI feature of <a href="https://nekoweb.org" target="_blank">nekoweb</a>, new f2u template, working on <a href="https://vgen.co/doqmeat" target="_blank">site comms</a></p>
+					<p class="date">last updated: 08.feb.26</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
