--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -174,6 +174,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
+					<!-- gradientring  -->
+					<div id="gradientring"><a href="https://gradientring.nekoweb.org/s/des/prev">←</a> <a href="https://gradientring.nekoweb.org/">gradientring</a> <a href="https://gradientring.nekoweb.org/s/des/next">→</a></div>
 					<!-- webfishing -->
 					<script src="https://fleuraward.github.io/webfishring/webfish.setup.js"></script>
 					<!-- code collective -->
