--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -83,6 +83,9 @@
 			</section>
 			<!-- 2025 section -->
 			<section id="y2026">
+				<aticle>
+					<p><b>10.feb.26 - 7pm</b> in the part of my degree where im just doing some bullshit</p>
+				</aticle>
 				<article>
 					<p><b>06.feb.26 - 11pm</b> life feels so good when you pirate adobe products.</p>
 				</article>
