--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -83,9 +83,12 @@
 			</section>
 			<!-- 2025 section -->
 			<section id="y2026">
-				<aticle>
+				<article>
+					<p><b>13.feb.25 - 7pm</b> had a dream that i started to rollerskate again and i felt so light</p>
+				</article>
+				<article>
 					<p><b>10.feb.26 - 7pm</b> in the part of my degree where im just doing some bullshit</p>
-				</aticle>
+				</article>
 				<article>
 					<p><b>06.feb.26 - 11pm</b> life feels so good when you pirate adobe products.</p>
 				</article>
