updated microblog, scrapbook, and reading log

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -81,13 +81,22 @@
 
 
 			</section>
-			<!-- 2025 section -->
+			<!-- <button onclick="showPic('IMG PATH','ALT TEXT','caption')">button</button> -->
 			<section id="y2026">
 				<article>
-					<p><b>13.feb.25 - 7pm</b> had a dream that i started to rollerskate again and i felt so light</p>
+					<p><b>15.feb.25 - 12am</b> i had such a nice valentine's day yesterday... i am very loved <img src="/!g/pix/heart-cat1.gif" alt="heart cat emoji"> also went to a little valentine's event as well and there was some art being displayed. i took pics of the ones i really liked. they are all depictions of love!
+						<button onclick="showPic('!g/260214-angels.png','angels embrasing each other','i thought this one was wonderful and it was made by a friend too!')">angels.png</button>
+						<button onclick="showPic('!g/260214-gay.png','female presenting people on top of another','loveeee this one very much')">gay.png</button>
+						<button onclick="showPic('!g/260214-plants.png','aliens planting','cute aliens')">plants.png</button>
+						<button onclick="showPic('!g/260214lovebug.png','beetle and a ladybug in love','BUG LOVE!')">buglove.png</button>
+						<button onclick="showPic('!g/260214-glorpy.png','crayon like drawing of a creature','this one isn\'t part of the gallery but it was a print i got at the same place. tee hee. looks like a glorpy to me.')">glorpy.png</button>
+					</p>
 				</article>
 				<article>
-					<p><b>10.feb.26 - 7pm</b> in the part of my degree where im just doing some bullshit</p>
+					<p><b>13.feb.25 - 7pm</b> had a dream that i started to rollerskate again and i felt so light doing so.</p>
+				</article>
+				<article>
+					<p><b>10.feb.26 - 7pm</b> in the part of my degree where im just doing some bullshit.</p>
 				</article>
 				<article>
 					<p><b>06.feb.26 - 11pm</b> life feels so good when you pirate adobe products.</p>
@@ -263,7 +272,7 @@
 				</article>
 
 				<article id="241030-5pm">
-					<p><b>30.oct.24 - 5pm</b> there was a comic book fair at my uni and lots of artists had tables so i kind of did a bit of a haul! links to artists: <a href=="https://skullcrabs.com/" target="_blank">skullcrabs</a>, <a href="https://pyoint.carrd.co/" target="_blank">pyoint</a>, <a href="https://camillereck.com" target="_blank">camille reck</a> <small>i'm missing two artists but i forgot to get their socials SORRY...</small> <br><button onclick="showPic('!g/241030-angel.jpg','keychain of angel from csm','ANGEL MEOW MEOW.... hes one of my fav characters of chainsaw man. artist: skullcrabs')">angel.jpg</button> <button onclick="showPic('!g/241030-power.jpg','enamel pin of power','ANOTHER MEOW MEOW from chainsaw man... ')">power.jpg</button> <button onclick="showPic('!g/241030-totebag.jpg','orange kitty totebag','i fell so in love with this tote bag oh my goddddd i love the colors so much. artist: pyoint')">totebag.jpg</button> <button onclick="showPic('!g/241030-puter.jpg','keychain of a computer','puter...')">puter.jpg</button> <button onclick="showPic('!g/241030-earrings.jpg','handmade cat earrings','i love silly earrings a lot so i had to get these! artist: camille reck')">earrings.jpg</button></p>
+					<p><b>30.oct.24 - 5pm</b> there was a comic book fair at my uni and lots of artists had tables so i kind of did a bit of a haul! links to artists: <a href="https://skullcrabs.com/" target="_blank">skullcrabs</a>, <a href="https://pyoint.carrd.co/" target="_blank">pyoint</a>, <a href="https://camillereck.com" target="_blank">camille reck</a> <small>i'm missing two artists but i forgot to get their socials SORRY...</small> <br><button onclick="showPic('!g/241030-angel.jpg','keychain of angel from csm','ANGEL MEOW MEOW.... hes one of my fav characters of chainsaw man. artist: skullcrabs')">angel.jpg</button> <button onclick="showPic('!g/241030-power.jpg','enamel pin of power','ANOTHER MEOW MEOW from chainsaw man... ')">power.jpg</button> <button onclick="showPic('!g/241030-totebag.jpg','orange kitty totebag','i fell so in love with this tote bag oh my goddddd i love the colors so much. artist: pyoint')">totebag.jpg</button> <button onclick="showPic('!g/241030-puter.jpg','keychain of a computer','puter...')">puter.jpg</button> <button onclick="showPic('!g/241030-earrings.jpg','handmade cat earrings','i love silly earrings a lot so i had to get these! artist: camille reck')">earrings.jpg</button></p>
 
 				</article>
 
