--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -18,6 +18,8 @@
 <body>
 	<main>
 		<h1>reading log</h1>
+		<p>should give this place a better layout but that's for another time.</p>
+		<p><b>latest entry</b> → <a href="#i-wanna-be-your-girl">i wanna be your girl</a></p>
 		<p>legend: ❤︎ - favorite</p>
 		<a title="pixel by bitmapdreams" href="http://lastsecret.net/bitmapdreams" target="_blank"><img src="https://doqmeat.com/!g/deco/crystalgreenhouse_book.gif" style="float:left;"></a>
 		<h2>current</h2>
@@ -67,6 +69,23 @@
 
 		<h2>finished</h2>
 		<ul>
+			<li id="i-wanna-be-your-girl">i wanna be your girl
+				<details>
+					<summary></summary>
+					<p>260213 → a very sweet read... when i saw the cover for the first volume i hurried so FAST to start reading this. i love stories like these very much that touch upon gender and discovering a loved one isn't who you thought they were this whole time. i could relate a little bit to the protagonist in terms of her issues with gender and expression. not sure i can put in into words in here just yet. i really wanted the mc and the trans mc girl to end up together but of well. i still really liked it nonetheless.</p>
+					<figure>
+						<img src="!g/i-wanna-be-your-girl/cover (1).jpg" width="32%" alt="manga panels from i wanna be your girl">
+						<img src="!g/i-wanna-be-your-girl/cover (2).jpg" width="32%" alt="manga panels from i wanna be your girl">
+						<img src="!g/i-wanna-be-your-girl/cover (3).jpg" width="32%" alt="manga panels from i wanna be your girl">
+						<figcaption>some of the covers for the chapters were so pretty.</figcaption>
+					</figure>
+					<p>and here are some other little moments i really liked as well.</p>
+					<img src="!g/i-wanna-be-your-girl/waitress (2).jpg" width="48%" alt="manga panels from i wanna be your girl">
+					<img src="!g/i-wanna-be-your-girl/waitress (1).jpg" width="48%" alt="manga panels from i wanna be your girl">
+					<img src="!g/i-wanna-be-your-girl/akira (1).jpg" width="48%" alt="manga panels from i wanna be your girl">
+					<img src="!g/i-wanna-be-your-girl/akira (2).jpg" width="48%" alt="manga panels from i wanna be your girl">
+				</details>
+			</li>
 			<li id="wraith-arc">puella magi madoka magica: wraith arc <details>
 					<summary></summary>
 					<p>250216 → basically a tie in between the anime and and rebellion. which tbh i don't think it was necessarily needed, but pretty cool it's there. and this is also considered sort of a spin off so i don't really know if this is canon or not in the lens of the whole story. it terms of it's story it does provide a more clear view of how homura turned out to be trapped (alongside the others) in her own witch labyrinth in <i>rebellion</i>. it was nice to see more about how wraiths work and how are they any different from witches. alsoooo soo interesting to know that homura now has memory altering powers in this version of her since her shield 'supposedly' didn't work in this timeline.</p>
@@ -112,6 +131,7 @@
 		</ul>
 		<h2>want to read</h2>
 		<ul>
+			<li>colorless girl</li>
 			<li>dorohedoro</li>
 			<li>one piece</li>
 			<li>your name / tamen de gushi</li>
