added another command

--- a/doqmeat/learning/bash/index.html
+++ b/doqmeat/learning/bash/index.html
@@ -27,13 +27,14 @@
 			<li><code>history</code> - gives you a history of your inputs.</li>
 			<li><code>help</code> - more info.</li>
 			<li><code>start [filename]</code> - opens a file.</li>
-			<li><code>mv [1] [2]</code> - for renaming / moving files</li>
+			<li><code>mv [source file] [destination directory or renaming]</code> - for renaming / moving files</li>
 			<li><code>pwd</code> - shows you where you currently are</li>
 			<li><code>which [programname]</code> - tells you the location path the terminal is using to locate the program.</li>
 			<li><code>ls</code> - lists files of the directory you're currently in. <code>ls -l</code> for a more detailed listing. <code>ls -a</code> to show hidden files. <code>ls --help</code> help!!!</li>
 			<li><code>rm</code> - remove a file.</li>
 			<li><code>echo</code> - outputs whatever you give it. </li>
 			<li><code>cat [filename]</code> - outputs the contents of that file in the terminal</li>
+			<li><code>scp [source file] [destination directory]</code> - lets you copy files between different computers with ssh</li>
 			<li><code>cp [filename1] [newfile]</code> - copies a files. you can also achieve the same with <code>cat &lt;[filename1]&gt; [newfile]</code></li>
 			<li><code>find -name '*[search]*'</code> - searches for files with that word.</li>
 			<li><code>sudo</code> - run things as a superuser</li>
