--- a/doqmeat/learning/bash/index.html
+++ b/doqmeat/learning/bash/index.html
@@ -29,7 +29,7 @@
 			<li><code>start [filename]</code> - opens a file.</li>
 			<li><code>mv [source file] [destination directory or renaming]</code> - for renaming / moving files</li>
 			<li><code>pwd</code> - shows you where you currently are</li>
-			<li><code>which [programname]</code> - tells you the location path the terminal is using to locate the program.</li>
+			<li><code>which [program-name]</code> - tells you the location path the terminal is using to locate the program.</li>
 			<li><code>ls</code> - lists files of the directory you're currently in. <code>ls -l</code> for a more detailed listing. <code>ls -a</code> to show hidden files. <code>ls --help</code> help!!!</li>
 			<li><code>rm</code> - remove a file.</li>
 			<li><code>echo</code> - outputs whatever you give it. </li>
