--- a/doqmeat/music/mini-pages/featured.html
+++ b/doqmeat/music/mini-pages/featured.html
@@ -70,10 +70,24 @@
 			</table>
 		</details>
 -->
-
 		<details open>
 			<summary>
-				<span class="date">09.sep.25 - ? :</span> 脚色 / facsimile
+				<span class="date">15.feb.26 - ? : </span> magic i want u / depression cherry
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="950" height="570" src="https://www.youtube.com/embed/BPNT7NzV53Y" title="Magic I Want U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>been obsessed with this song ever since i heard the EP... it's so good.</p>
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Cy5MiOqarYs?si=K0JpYpM5WDZY5YSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>i say that beach house is one of my favorite bands and yet i haven't listened to all of their discography... i started going through all of their released in chronological order and it's so awesome since i get to listen to albums that made me fall in love with the band in the first place. and one of those albums is <i>depression cherry</i>. one of my favorite albums EVER!</p>
+				</td>
+			</table>
+		</details>
+		<details>
+			<summary>
+				<span class="date">09.sep.25 - 15.feb.26 :</span> 脚色 / facsimile
 			</summary>
 			<table>
 				<td class="t-left">
