--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>15.feb.26</b> - new featured song and album!</p>
       <p><b>15.jan.26</b> - <a href="recaps/2025/">2025 recap</a></p>
       <p><b>17.nov.25</b> - added a new album to my <a href="fav-albums/index.html">favs</a>: <i>error</i> by uki3 / ewe</p>
       <p><b>09.sep.25</b> - featured music updated :3</p>
@@ -95,15 +96,14 @@
     <div id="featured" class="box">
       <h3>featured song &amp; album</h3>
       <div class="song">
-        <h4><b>脚色</b> - uki3/ewe</h4>
-        <iframe width="864" height="486" src="https://www.youtube.com/embed/PyWik2QfWg4?list=PLXBN365J_wjUaks3AXkNG7P6Ts8ONr0FL" title="脚色" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>been a little bit obsessed with uki3/ewe as of late and this is the latest banger i've been having on repeat as of late.</p>
+        <h4><b>magic i want u</b> - jane remover</h4>
+        <iframe width="950" height="570" src="https://www.youtube.com/embed/BPNT7NzV53Y" title="Magic I Want U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>been obsessed with this song ever since i heard the EP... it's so good.</p>
       </div>
       <div class="lp">
-        <h4><b>facsimile</b> - balloon/ewe</h4>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=mCDY9tQULTpMV5UM&amp;list=OLAK5uy_lGc-RqgZbXolfBDLQQldHvmlgSFzp35xs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>the concept of rearranging each other songs in a compilation album is sooo cute. balloon's and uki3's contributions to each of their respective songs are so good and it's very nice to see that distinction between their sounds and how nicely they compliment each other. not only that but i also think the original songs included in this are a banger as well. overall a lovely project. i wish i could hear more stuff like this.</p>
-        <p><b>highlights:</b> taikou train (balloon arrange), felis, charles (ewe arrange)</p>
+        <h4><b>depression cherry</b> - beach house</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Cy5MiOqarYs?si=K0JpYpM5WDZY5YSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>i say that beach house is one of my favorite bands and yet i haven't listened to all of their discography... i started going through all of their released in chronological order and it's so awesome since i get to listen to albums that made me fall in love with the band in the first place. and one of those albums is <i>depression cherry</i>. one of my favorite albums EVER!</p>
       </div>
       <hr>
 
@@ -141,7 +141,7 @@
     <footer id="foot" class="box">
       <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
       <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-      last updated on 16.jul.25
+      last updated on 15.feb.26
       <br>
       <b>credit:</b>
       bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
