--- a/doqmeat/notebook/F2U/templates.html
+++ b/doqmeat/notebook/F2U/templates.html
@@ -29,11 +29,11 @@
 		<li>you are allowed to edit and use code from these templates for your own things to your hearts content</li>
 		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.com/" target="_blank">website</a> anywhere is very appreciated.</li>
 
-		<h2 id="walkman"><a title="preview and download" href="https://doqmeat.github.io/js-walkman-mp3-player/" target="_blank">JS sony walkman mp3 player</a></h2>
-		<img src="https://github.com/doqmeat/js-walkman-mp3-player/raw/master/examples/walkman.gif" alt="demo of the JS walkman mp3 player">
+		<h2 id="walkman"><a title="preview and download" href="preview/walkman/" target="_blank">JS sony walkman mp3 player</a></h2>
+		<img src="https://tangled.org/doqmeat.com/js-walkman-mp3-player/raw/main/files/walkman.gif" alt="demo of the JS walkman mp3 player">
 		<p>i had one of these when i was little so i wanted to try doing a JS music player (using sayantanm19's <a href="https://github.com/sayantanm19/js-music-player" target="_blank" class="outlink">js-music-player</a>) that looked as much as the real thing. it was very fun to do tbh! i implemented a little playlist screen in which you can select what song to play.</p>
-		<p>it looks best on firefox, but looks okay on chrome. more details about issues can be found on the github repo.</p>
-		<h2 id="yukika"><a title="click for preview and download!" href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">yukika passport</a></h2>
+		<p>it looks best on firefox, but looks okay on chrome. more details about issues can be found on the tangled repo</p>
+		<h2 id="yukika"><a title="click for preview and download!" href="preview/yukika.html" target="_blank">yukika passport</a></h2>
 		<img src="preview/yukika1.jpg" width="100%" alt="screenshots of yukika theme">
 		<img src="preview/yukika2.jpg" width="100%" alt="screenshots of yukika theme">
 		<p>a fun exercise on CSS animations and to see how close i could get to doing all of this with my current knowledge of JS. inspired by yukika's soul lady album and the passport inclusion! i talk more about it in the preview :3</p>
