--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -1,5 +1,6 @@
 <!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->info<!--# endblock -->
+<!--# block name="updated" --> <!--# flastmod file="~/info/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --> <!--# endblock -->
 <!--# block name="content" -->
 <h2>sitely</h2>
 <ul>
@@ -7,7 +8,7 @@
   <li>under <b>doqmeat.com</b> since 24.mar.24!</li>
   <li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a> (apr 2023 - jan 2026), <a href="https://nekoweb">nekoweb</a> (jan 2026 - ?)</li>
   <li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
-  <li>deployed to nekoweb via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a></li>
+  <li>deployed to nekoweb via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a> using <a href="https://deploy.nekoweb.org/" target="_blank">deply2nekoweb</a></li>
 </ul>
 <h2>tools</h2>
 
